force-app/main/default/objects/Third_Party_Material__c/Third_Party_Material__c.object-meta.xml
<CustomObject>
    <label>Third Party Material</label>
    <nameField>
        <label>Third Party Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>