force-app/main/default/objects/Third_Party_Material__c/fields/How_Was_Material_Obtained__c.field-meta.xml
<CustomField>
    <fullName>How_Was_Material_Obtained__c</fullName>
    <label>How Was Material Obtained</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTA</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>