force-app/main/default/objects/Third_Party_Material__c/fields/Invention_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Invention_Disclosure__c</fullName>
    <label>Invention Disclosure</label>
    <referenceTo>Invention_Disclosure__c</referenceTo>
    <relationshipLabel>Third Party Material</relationshipLabel>
    <relationshipName>Third_Party_Material</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>