force-app/main/default/objects/Third_Party_Material__c/fields/Material_Obtained_Comment__c.field-meta.xml
<CustomField>
    <fullName>Material_Obtained_Comment__c</fullName>
    <label>Material Obtained Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>